Add select files mechanism. Update openapi
